--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,10 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: docker info
+        run: |
+          docker info
+          where mingw
+          where cmake
 
 #      # Runs a set of commands using the runners shell
 #      - name: Run a multi-line script
