--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,22 +15,23 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: |
-          docker info
-          where mingw
-          where cmake
+      - name: pull atcbuild
+        run: echo $GH_TOKEN | docker login ghcr.io -u felix-b --password-stdin && docker pull ghcr.io/felix-b/atcbuild
+        env:
+          GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
-#      # Runs a set of commands using the runners shell
-#      - name: Run a multi-line script
-#        run: |
-#          echo Add other actions to build,
-#          echo test, and deploy your project.
+      - name: print GITHUB_WORKSPACE
+        run: echo "$GITHUB_WORKSPACE"
+
+      - name: run atcbuild
+        run: docker run --rm -v ${GITHUB_WORKSPACE}/atc/src:/src ghcr.io/felix-b/atcbuild
+
+      - name: create zips to download
+        run: echo "not implemented"
