--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: pull atcbuild
-        run: echo $GH_TOKEN | docker login ghcr.io -u felix-b --password-stdin && docker pull ghcr.io/felix-b/atcbuild
+        run: docker pull ghcr.io/felix-b/atcbuild
         env:
           GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
