--- a/.github/workflows/update-docker-atcbuild.yml
+++ b/.github/workflows/update-docker-atcbuild.yml
@@ -1,16 +1,21 @@
 # This is a basic workflow to help you get started with Actions
 
-name: docker-image-atcbuild
+name: update-docker-atcbuild
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
-  workflow_dispatch
+  workflow_dispatch:
+    inputs:
+      imageTag:
+        description: 'How to tag the new image?'
+        required: true
+        default: 'latest'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  build-and-push:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -19,21 +24,25 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
+      - name: docker login & pull
+        run: echo $CR_PAT | docker login ghcr.io -u felix-b --password-stdin && docker pull ghcr.io/felix-b/atcbuild
+        env:
+          CR_PAT: ${{secrets.CR_PAT}}
+
+      - name: docker image ls (before)
+        run: docker image ls
+
       - name: docker build
         run: cd docker/atcbuild && docker build -t ghcr.io/felix-b/atcbuild . 
 
-      - name: docker image ls
+      - name: docker image ls (after)
         run: docker image ls
 
       - name: docker login & push
-        run: echo $GH_TOKEN | docker login ghcr.io -u felix-b --password-stdin && docker push ghcr.io/felix-b/atcbuild
+        run: echo $CR_PAT | docker login ghcr.io -u felix-b --password-stdin && docker push ghcr.io/felix-b/atcbuild
         env:
-          GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          CR_PAT: ${{secrets.CR_PAT}}
 
-#      - name: docker login & push
-#        run: echo $CR_PAT | docker login ghcr.io -u felix-b --password-stdin && docker push ghcr.io/felix-b/atcbuild
-#        env:
-#          CR_PAT: ${{secrets.CR_PAT}}
 
 #      # Runs a set of commands using the runners shell
 #      - name: Run a multi-line script
