--- a/.github/workflows/update-docker-atcbuild.yml
+++ b/.github/workflows/update-docker-atcbuild.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: update-docker-atcbuild
+name: UpdateDockerATCBuild
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -15,7 +15,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build-and-push:
+  build_and_push:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
