--- a/.github/workflows/update-docker-atcbuild.yml
+++ b/.github/workflows/update-docker-atcbuild.yml
@@ -1,13 +1,17 @@
 # This is a basic workflow to help you get started with Actions
 
-name: updateDockerATCBuild
+name: update_docker_atcbuild
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
   workflow_dispatch:
     inputs:
-      imageTag:
+      image_tag:
         description: 'How to tag the new image?'
         required: true
         default: 'latest'
@@ -15,7 +19,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  buildAndPush:
+  build_and_push:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
