--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,3 +50,9 @@ jobs:
           name: airTrafficAndControl.zip
           path: airTrafficAndControl.zip
 
+      - name: if master, publish zip as nightly release
+        if: github.ref == 'refs/heads/master'
+        run: |
+          echo "DRY-RUN> github.ref = ${{github.ref}}"
+          echo "DRY-RUN> publish zip as nightly release"
+  
