--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: https://uploads.github.com/repos/felix-b/atc/releases/31521929/assets
-          asset_path: ./airTrafficAndControl.zip
-          asset_name: airTrafficAndControl.zip
-          asset_content_type: application/zip
+          upload_url: 'https://uploads.github.com/repos/felix-b/atc/releases/31521929/assets'
+          asset_path: 'airTrafficAndControl.zip'
+          asset_name: 'airTrafficAndControl.zip'
+          asset_content_type: 'application/zip'
