--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,23 @@ jobs:
       - name: run atcbuild
         run: docker run --rm -v ${GITHUB_WORKSPACE}:/src --user $(id -u):$(id -g) ghcr.io/felix-b/atcbuild lin win mac
 
+      - name: create version.txt
+        run: |
+          echo $(date) > assets/version.txt
+          if ["$GH_HEAD_REF" != ""]; then
+            echo "PR # $GH_PR_ID - this is a pull request build!" >> assets/version.txt
+          fi
+          echo "build # $GH_RUN_NUMBER" >> assets/version.txt 
+          echo "commit $COMMIT_SHA" >> assets/version.txt
+          echo "to $GH_REF" >> assets/version.txt
+        env:
+          GH_RUN_NUMBER: ${{ github.run_number }}
+          GH_COMMIT_SHA: ${{ github.sha }}
+          GH_EVENT_NAME: ${{ github.event_name }}
+          GH_REF: ${{ github.ref }}
+          GH_HEAD_REF: ${{ github.head_ref }}
+          GH_PR_ID: ${{ github.event.number }}
+
       - name: create zip artifact
         run: |
           mkdir -p assets/64
@@ -56,7 +73,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: 'https://uploads.github.com/repos/felix-b/atc/releases/31521929/assets?name=airTrafficControl'
+          upload_url: 'https://uploads.github.com/repos/felix-b/atc/releases/31521929/assets?name=airTrafficControl.zip'
           asset_path: 'airTrafficAndControl.zip'
           asset_name: 'airTrafficAndControl.zip'
           asset_content_type: 'application/zip'
