--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
           path: airTrafficAndControl.zip
 
       - name: if master, find current nightly download
-        #if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master'
         uses: octokit/request-action@v2.x
         id: get_old_release_asset
         with:
@@ -79,13 +79,13 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: if master, log found nightly download
-        #if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master'
         run: echo "$ASSET_JSON"
         env:
           ASSET_JSON: ${{ steps.get_old_release_asset.outputs.data }}
 
       - name: if master, delete current nightly download
-        #if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master'
         uses: octokit/request-action@v2.x
         with:
           route: DELETE /repos/:repository/releases/assets/:old_asset_id
@@ -95,7 +95,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: if master, publish new nightly download
-        #if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master'
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -106,7 +106,7 @@ jobs:
           asset_content_type: 'application/zip'
 
       - name: if master, update nightly release text
-        #if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master'
         uses: octokit/request-action@v2.x
         with:
           route: PATCH /repos/:repository/releases/31521929
