Add real project structure - WIP

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libs/XPSDK"]
 	path = libs/XPSDK
 	url = https://github.com/PhilippMuenzel/SDK.git
+[submodule "libs/googletest"]
+	path = libs/googletest
+	url = https://github.com/google/googletest/
