--- a/src/libdataxp/CMakeLists.txt
+++ b/src/libdataxp/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 3.9)
 project(libdataxp VERSION 0.1.0)
 
 add_library(libdataxp STATIC 
-    dummyxp.h
-    dummyxp.cpp    
+    libdataxp.h
+    libdataxp.cpp    
 )
 
 set_property(TARGET libdataxp PROPERTY CXX_STANDARD 14)
