--- a/src/libworld_test/CMakeLists.txt
+++ b/src/libworld_test/CMakeLists.txt
@@ -3,15 +3,15 @@ project(libworld_test CXX)
 
 message("GTEST_INCLUDE_DIR = ${GTEST_INCLUDE_DIR}")
 
-set(GTEST_ROOT "${GTEST_LIBRARY_PATH}")
-find_package(GTest REQUIRED)
+#set(GTEST_ROOT "${GTEST_LIBRARY_PATH}")
+#find_package(GTest REQUIRED)
 
 include(CTest)
 include(GoogleTest)
 enable_testing()
 
 add_executable(libworld_test 
-    dummy_test.cpp
+    libworld_test.cpp
 )
 
 set_property(TARGET libworld_test PROPERTY CXX_STANDARD 14)
@@ -19,11 +19,13 @@ target_include_directories(libworld_test PUBLIC ../libworld)
 target_link_libraries(libworld_test libworld GTest::GTest GTest::Main)
 
 message("CMAKE_CURRENT_SOURCE_DIR = ${CMAKE_CURRENT_SOURCE_DIR}")
-gtest_discover_tests(
-    libworld_test
-    PROPERTIES WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-)
 
+if (ATCBUILD_CAN_RUN_TESTS)
+    gtest_discover_tests(
+        libworld_test
+        PROPERTIES WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+    )
+endif()
 
 # cmake_minimum_required(VERSION 3.9)
 # project(libworld_test CXX)
