--- a/src/libworld/CMakeLists.txt
+++ b/src/libworld/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 3.9)
 project(libworld VERSION 0.1.0)
 
 add_library(libworld STATIC 
-    dummy.h
-    dummy.cpp    
+    libworld.h
+    libworld.cpp    
 )
 
 set_property(TARGET libworld PROPERTY CXX_STANDARD 14)
