--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 	path = libs/googletest
 	url = https://github.com/google/googletest.git
 	ignore = dirty
+[submodule "libs/XPMP2"]
+	path = libs/XPMP2
+	url = https://github.com/TwinFan/XPMP2.git
