Compile XPMP2 by atcbuild - WIP

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ message ("ATCBUILD_CAN_RUN_TESTS" = ${ATCBUILD_CAN_RUN_TESTS})
 message ("CMAKE_SYSTEM_NAME" = ${CMAKE_SYSTEM_NAME})
 message ("CMAKE_HOST_SYSTEM_NAME" = ${CMAKE_HOST_SYSTEM_NAME})
 message ("CMAKE_CURRENT_BINARY_DIR" = ${CMAKE_CURRENT_BINARY_DIR})
+message ("CMAKE_CXX_COMPILER_ID" = ${CMAKE_CXX_COMPILER_ID})
 
 set(ATC_LIBS_PATH "${CMAKE_CURRENT_SOURCE_DIR}/libs")
 set(GTEST_INCLUDE_DIR "${ATC_LIBS_PATH}/googletest/googletest/include")
