--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,33 +1,27 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+  build-linux:
+    runs-on: ubuntu-latest
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-        with: 
-          submodules: 'recursive'
 
       - name: print environment
         run: |
           echo "GITHUB_WORKSPACE=${GITHUB_WORKSPACE}"
-          echo "gcc version=$(gcc --version)"
+          gcc --version
+          cmake --version
+
+      - name: checkout
+        uses: actions/checkout@v2
+        with: 
+          submodules: 'recursive'
 
       - name: build googletest
         run: |
@@ -53,3 +47,59 @@ jobs:
           cmake ..
           make
           make test
+
+      - name: run unit tests
+        run: |
+          cd ${GITHUB_WORKSPACE}/build
+          ls -la
+          make test
+
+  build-windows:
+    runs-on: windows-latest
+    steps:
+
+      - name: print environment
+        run: |
+          echo "GITHUB_WORKSPACE=%GITHUB_WORKSPACE%"
+          gcc --version
+          cmake --version
+
+      - name: checkout
+        uses: actions/checkout@v2
+        with: 
+          submodules: 'recursive'
+
+      - name: build googletest
+        run: |
+          cd %GITHUB_WORKSPACE%\libs\googletest
+          dir
+          mkdir build
+          cd build
+          cmake .. -G "MinGW Makefiles"
+          make
+      
+      - name: build XPMP2
+        run: |
+          cd %GITHUB_WORKSPACE%\libs\XPMP2
+          dir
+          mkdir build
+          cd build
+          cmake .. -G "MinGW Makefiles"
+          make
+      
+      - name: build the plugin
+        run: |
+          cd %GITHUB_WORKSPACE%
+          dir
+          mkdir build
+          cd build
+          cmake .. -G "MinGW Makefiles"
+          make
+          make test
+
+      - name: run unit tests
+        run: |
+          cd %GITHUB_WORKSPACE%\build
+          dir
+          make test
+
