--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,9 +60,11 @@ jobs:
 
       - name: print environment
         run: |
-          echo "GITHUB_WORKSPACE=${GITHUB_WORKSPACE}"
+          echo "GITHUB_WORKSPACE=${env:GITHUB_WORKSPACE}"
           gcc --version
           cmake --version
+        env:
+          REPO_DIR
 
       - name: checkout
         uses: actions/checkout@v2
@@ -71,7 +73,7 @@ jobs:
 
       - name: build googletest
         run: |
-          cd ${GITHUB_WORKSPACE}\libs\googletest
+          cd ${env:GITHUB_WORKSPACE}\libs\googletest
           dir
           mkdir build
           cd build
@@ -80,7 +82,7 @@ jobs:
       
       - name: build XPMP2
         run: |
-          cd ${GITHUB_WORKSPACE}\libs\XPMP2
+          cd ${env:GITHUB_WORKSPACE}\libs\XPMP2
           dir
           mkdir build
           cd build
@@ -89,7 +91,7 @@ jobs:
       
       - name: build the plugin
         run: |
-          cd ${GITHUB_WORKSPACE}
+          cd ${env:GITHUB_WORKSPACE}
           dir
           mkdir build
           cd build
@@ -99,7 +101,7 @@ jobs:
 
       - name: run unit tests
         run: |
-          cd ${GITHUB_WORKSPACE}\build
+          cd ${env:GITHUB_WORKSPACE}\build
           dir
           make test
 
