--- a/tools/docker/atcbuild/Dockerfile
+++ b/tools/docker/atcbuild/Dockerfile
@@ -42,6 +42,15 @@ RUN mkdir -p "/tmp/osxcross" \
 
 # Install dependency libraries under Linux.
 RUN apt-get install -y --no-install-recommends freeglut3-dev libudev-dev libopenal-dev g++-multilib gcc-multilib libspeechd-dev && apt-get clean
+RUN apt-get install -y --no-install-recommends python && apt-get clean
+
+# Upgrade cmake to latest
+RUN apt-get -y --no-install-recommends install apt-transport-https gnupg software-properties-common wget \
+ && wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | sudo tee /etc/apt/trusted.gpg.d/kitware.gpg >/dev/null \
+ && apt-add-repository 'deb https://apt.kitware.com/ubuntu/ xenial main' \
+ && apt-get update \
+ && apt-get -y --no-install-recommends install cmake \
+ && rm /usr/local/bin/cmake
 
 RUN echo "" | adduser --uid 1000 --disabled-password  --gecos "" builduser && adduser builduser sudo
 RUN echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
