Make local build work on Mac + add task scripts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,15 @@ message ("ATC_LIBS_PATH" = ${ATC_LIBS_PATH})
 message ("GTEST_INCLUDE_DIR" = ${GTEST_INCLUDE_DIR})
 message ("GTEST_LIBRARY_PATH" = ${GTEST_LIBRARY_PATH})
 
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build/lib")
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build/lib")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build/bin")
+set(CMAKE_STATIC_LIBRARY_PREFIX "")
+
+message ("CMAKE_LIBRARY_OUTPUT_DIRECTORY" = ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
+message ("CMAKE_ARCHIVE_OUTPUT_DIRECTORY" = ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
+message ("CMAKE_RUNTIME_OUTPUT_DIRECTORY" = ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+
 message ("------ atcbuild: end of environment ------")
 
 add_subdirectory(src)
